# fa

./: .env.example  .gitignore  DEPLOYMENT_PLAN.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SPEC_MVP_FEATURES.md  LOAD_TESTING_README.md  PHASE4_SUMMARY.md  PRD.md  PRESENTATION.md  README.md  README_template.md  SUPPORT_GUIDE.md  UI_IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md  docker-compose.yml  langgraph.json  phase0_prompt.md  phase1_prompt.md  phase2_prompt.md  phase3_prompt.md  phase4_prompt.md  pyproject.toml
config/: ab_tests.yaml
dashboards/: cost_dashboard.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_VISUALIZATIONS.md  DASHBOARD_PLAN.md  DEPLOYMENT_GUIDE.md  ENTERPRISE_SUPERVISOR_ARCHITECTURE.md  LANGSMITH_PROMPT_MANAGEMENT.md  META_MONITORING_PLAN.md  MONITORING_GUIDE.md  OPERATIONS_RUNBOOK.md  PHASE5_PLAN.md  PHASE5_RESULTS.md  SUPERVISOR_ARCHITECTURE.md  SUPERVISOR_REBUILD_PLAN.md
mcp_servers/: __init__.py  edo_sql_server.py
scripts/: INDEXES_VIEWS_SUMMARY.md  QUICK_REFERENCE.md  apply_indexes_views.py  clean_edo_tables.py  create_admin_tables.sql  create_indexes_views.sql  create_load_test_tables.sql  generate_accounts_holdings_only.py  generate_load_test_data.py  seed_advisors.py  seed_meta_monitoring_data.py  seed_test_data.py  setup_database.py  setup_langsmith_prompts.py  start_batch_dashboard.sh  start_batch_scheduler.sh  start_interactive_server.sh  start_meta_monitoring.sh  test_batch_run.py  test_indexes_views.py  test_indexes_views_simple.py  test_perplexity.py
ui/: QUICK_START.md  README.md  next.config.js  package-lock.json  (+2 more)
(+168 files in other folders)
